# markdown2pdf

./: .gitignore  Cargo.toml  EXTEND_FONT_ARCHITECTURE.md  EXTEND_FONT_CHANGELOG.md  EXTEND_FONT_EXAMPLES.md  EXTEND_FONT_IMPLEMENTATION.md  EXTEND_FONT_INDEX.md  EXTEND_FONT_README.md  EXTEND_FONT_SUMMARY.txt  README.md  dist-workspace.toml  genpdfi_extended  markdown2pdfrc.example.toml  markdown2pdfrc.toml  microtex_rs
.github/workflows/: ci.yaml  release.yml
doc_helper/mermaid/: index.html  mermaid.min.js
docker/: Dockerfile.ubuntu24
scripts/: extend_font.py
src/lib/: code_font_fallbacks.rs  config.rs  debug.rs  embedded_fonts.rs  fonts.rs  highlighting.rs  images.rs  latex.rs  lib.rs  markdown.rs  pdf.rs  styling.rs  validation.rs
syntaxes/powershell/: PowerShell.YAML-tmLanguage  PowerShell.sublime-syntax  PowerShell.tmLanguage
syntaxes/typescript/: TypeScript.sublime-syntax  TypeScriptReact.sublime-syntax
tests/: badges_spacing.rs  bin_main_integration.rs  box_drawing_bytes_presence.rs  check_pdf_fonts.py  cli_embedded_fonts.rs  cli_font_mapping.rs  dir_structure_test.md  extend_font_glyph_copying.rs  extend_font_integration.rs  extend_font_test.py  image_integration.rs  image_linking.rs  image_with_link_integration.rs  images.md  latex_example.md  latex_examples.md  latex_feature_integration.rs  latex_integration.rs  latex_render_integration.rs  linebreak_handling.rs  mermaid_examples.md  mermaid_render_each.rs  mono_box_drawing_embedded_fonts.rs  pdf_render_integration.rs  render_badge.md  scale_factor_config_parsing.rs  space_mono_box_drawing.rs  svg_integration.rs  svg_scaling_integration.rs  test_snippets.md
