[workspace]

[package]
name = "markdown2pdf"
version = "0.2.0"
edition = "2021"
authors = ["Ismael Sh <me@theiskaa.com>", "Ronan Le Meillat"]
description = "Create PDF with Markdown files (a md to pdf transpiler)"
readme = "README.md"
license = "MIT"
keywords = ["md", "markdown", "pdf", "markdown-to-pdf", "markdown2pdf"]
repository = "https://github.com/sctg-development/markdown2pdf"

[lib]
name = "markdown2pdf"
path = "src/lib/lib.rs"

[[bin]]
name = "markdown2pdf"
path = "src/bin/main.rs"

[features]
default = []
fetch = ["dep:reqwest"]
rustls-tls = ["fetch", "reqwest/rustls"]
native-tls = ["fetch", "reqwest/native-tls"]

[dependencies]
genpdfi_extended = { git = "https://github.com/sctg-development/genpdfi-extended.git", rev = "c751b36dc4312", package = "genpdfi_extended" } # printpdf 0.7.0
printpdf = "0.7.0"
# genpdfi_extended = { git = "https://github.com/sctg-development/genpdfi-extended.git", package = "genpdfi_extended" } # printpdf 0.8.2
# printpdf = "0.8.2"
dirs = "6.0.0"
toml = "0.9.8"
once_cell = "1.21"
rust-embed = "8.9"
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.13.1", features = [
    "blocking",
], default-features = false, optional = true }
fontdb = "0.23.0"

lopdf = "0.38.0"
rusttype = "0.8"
syntect = "5.3.0"
lazy_static = "1.4"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[dev-dependencies]
assert_cmd = "2.0.8"
predicates = "3.1.3"
tempfile = "3.6"
lopdf = "0.38"
deunicode = "1.1"
