[workspace]

[package]
name = "markdown2pdf"
version = "0.3.0"
edition = "2021"
authors = ["Ismael Sh <me@theiskaa.com>", "Ronan Le Meillat"]
description = "Create PDF with Markdown files (a md to pdf transpiler)"
readme = "README.md"
license = "MIT"
keywords = ["md", "markdown", "pdf", "markdown-to-pdf", "markdown2pdf"]
repository = "https://github.com/sctg-development/markdown2pdf"

[package.metadata.wix]
upgrade-guid = "25718F5E-AD0A-4CB0-AA20-B63C11D574A4"
path-guid = "2D706E2A-B758-4DBD-A5BB-6434B19C742A"
license = false
eula = false

[lib]
name = "markdown2pdf"
path = "src/lib/lib.rs"

[[bin]]
name = "markdown2pdf"
path = "src/bin/main.rs"

[features]
default = ["fetch", "rustls-tls"]
fetch = ["dep:reqwest"]
rustls-tls = ["fetch", "reqwest/rustls"]
native-tls = ["fetch", "reqwest/native-tls"]

[dependencies]
genpdfi_extended = { git = "https://github.com/sctg-development/genpdfi-extended.git", package = "genpdfi_extended", features = [
    "images",
] } # printpdf 0.8.2
# genpdfi_extended = { path = "./genpdfi_extended", features = ["images"] }
printpdf = "0.8.2"
microtex_rs = { git = "https://github.com/sctg-development/microtex_rs.git", package = "microtex_rs", features = [
    # "vendored-cairo",
    # "vendored-pango",
] }
# microtex_rs = { path = "./microtex_rs", features = [] }
dirs = "6.0.0"
toml = "0.9.8"
once_cell = "1.21"
rust-embed = "8.9"
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.13.1", features = [
    "blocking",
    "http2",
], default-features = false, optional = true }
fontdb = "0.23.0"

lopdf = "0.38.0"
rusttype = "0.9.3"
syntect = "5.3.0"
lazy_static = "1.4"
log = "0.4"
env_logger = "0.11"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[dev-dependencies]
assert_cmd = "2.0.8"
predicates = "3.1.3"
tempfile = "3.6"
lopdf = "0.38"
deunicode = "1.1"
